# sed-pcre

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  configure.sh  mac-make.sh  main.c  test.sh
lib/: main.c  psed.h  sed-pcre.h
lib/src/: program.c  psed.c  sed-pcre.c
tests/: foo.c  test.h
